# 3-package-jaguarundi

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
Jaguarundi/: function_1.py  function_2.py  function_3.py  function_4.py
src/dogcare/: __init__.py  __main__.py  care.py  dog.py
tests/: test_2.py  test_care.py  test_dog.py
