[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dogcare"
version = "0.0.1"
description = "A Python package to calculate dog care recommendations based on species, weight, size, and age."
authors = [
    { name = "Zeyue Xu" },
    { name = "Steve Yoo" },
    { name = "Hanlin Yan" },
    { name = "Grace Yin" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["dog", "pet", "care", "health"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/swe-students-spring2026/3-package-jaguarundi"
"Bug Tracker" = "https://github.com/swe-students-spring2026/3-package-jaguarundi/issues"

[project.scripts]
dogcare = "dogcare.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
